<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/learning"
        android:layout_width="159dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/learning"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recognition" />

    <Button
        android:id="@+id/about"
        android:layout_width="159dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/about"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learning" />

    <Button
        android:id="@+id/recognition"
        android:layout_width="159dp"
        android:layout_height="71dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/recognition"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asl_assist" />

    <TextView
        android:id="@+id/mainmenu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="Teman Tuli"
        android:textColor="#009688"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asl_assist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="Bisindo Asistant App"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainmenu_title" />

</androidx.constraintlayout.widget.ConstraintLayout>